--- a/tonesavvy-escala.html
+++ b/tonesavvy-escala.html
@@ -186,7 +186,7 @@ into the {body} of the default.hbs template -->
 
 <p>Há uma grande variedade de escalas disponíveis, além das tradicionais maiores e menores, como os modos gregos, pentatônicas, blues e tons inteiros, dentre outras.</p>
 
-<p>Deixe a opção de som ligada, para se familiarizar com as sonoridades.</p>
+<p>Deixe ligado o som, para se familiarizar com as sonoridades características de cada escala.</p>
 
 <p><img src="assets/tonesavvy-escalas-snapshot.png" alt="snapshot" width="80%" /></p>
 
@@ -201,7 +201,7 @@ into the {body} of the default.hbs template -->
 
 <p>…recomenda-se a configuração em anexo:</p>
 
-<iframe src="https://drive.google.com/file/d/1-st8alHwwI4sO6Ku71fXRv8hmUeGUEOJ/preview" width="640" height="480" allow="autoplay"></iframe>
+<p><img src="assets/escalas-config.png" alt="snapshot" width="80%" /></p>
 
                 </div>
             </section>
