--- a/about/index.html
+++ b/about/index.html
@@ -124,7 +124,7 @@ into the {body} of the default.hbs template -->
     <li class="nav-getting-started" role="menuitem"><a href="/notacaomusical/tag/editores/">Editores</a></li>
     <li class="nav-getting-started" role="menuitem"><a href="/notacaomusical/tag/jogos-e-exercicios/">Jogos e Exercícios</a></li>
     <li class="nav-getting-started" role="menuitem"><a href="/notacaomusical/tag/repertorio/">Repertório</a></li>
-    <li class="nav-getting-started" role="menuitem"><a href="/notacaomusical/tag/metodos/">Métodos</a></li>
+    <li class="nav-getting-started" role="menuitem"><a href="/notacaomusical/tag/pedagogias/">Pedagogias</a></li>
     <li class="nav-getting-started" role="menuitem"><a href="/notacaomusical/tag/outros/">Outros</a></li>
 </ul>
         
