--- a/notacaomusical-pages/about/index.html
+++ b/notacaomusical-pages/about/index.html
@@ -43,7 +43,7 @@
     <meta property="og:site_name" content="notação musical" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Sobre" />
-    <meta property="og:description" content="Nos anos de 2020 e 2021, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes). Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para" />
+    <meta property="og:description" content="Nos anos de 2020 a 2022, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes). Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para" />
     <meta property="og:url" content="http://0.0.0.0:4000/notacaomusical/about/" />
     <meta property="og:image" content="http://0.0.0.0:4000/notacaomusical/assets/images/Guidonian_hand.jpeg" />
     <meta property="article:publisher" content="https://www.facebook.com/ghost" />
@@ -52,7 +52,7 @@
     <meta property="article:modified_time" content="" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sobre" />
-    <meta name="twitter:description" content="Nos anos de 2020 e 2021, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes). Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para" />
+    <meta name="twitter:description" content="Nos anos de 2020 a 2022, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes). Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para" />
     <meta name="twitter:url" content="http://0.0.0.0:4000/notacaomusical/" />
     <meta name="twitter:image" content="http://0.0.0.0:4000/notacaomusical/assets/images/Guidonian_hand.jpeg" />
     <meta name="twitter:label1" content="Written by" />
@@ -82,7 +82,7 @@
         "@type": "WebPage",
         "@id": "http://0.0.0.0:4000/notacaomusical/about/"
     },
-    "description": "Nos anos de 2020 e 2021, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes). Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para"
+    "description": "Nos anos de 2020 a 2022, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes). Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para"
 }
     </script>
 
@@ -162,7 +162,7 @@ into the {body} of the default.hbs template -->
             
 
             <section class="post-full-content">
-                <p>Nos anos de 2020 e 2021, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes).</p>
+                <p>Nos anos de 2020 a 2022, o isolamento social recomendado para conter a pandemia de Covid-19 trouxe a necessidade da adoção do Ensino Remoto Emergencial na Universidade Federal do Espírito Santo (Ufes).</p>
 
 <p>Este blog apresenta alguns dos resultados de um levantamento de recursos interativos de livre acesso e gratuitos para a aquisição de conhecimentos e habilidades relacionados à Linguagem Musical.</p>
 
